added 	form submit alert 	authentication 	static password from properties file

--- a/src/main/resources/templates/components/badge.html
+++ b/src/main/resources/templates/components/badge.html
@@ -80,6 +80,7 @@
 </head>
 <body>
 <div id="react-content">
+    <a class="ant-btn ant-btn-danger" th:href="@{/logout}">Logout</a>
     <div class="main-wrapper">
         <div class="ant-row">
             <div
