--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -6,6 +6,7 @@
 <head layout:replace="~{/layouts/partials/head}"></head>
 <body class="" th:fragment="layout(vCenter, currentPage)">
 <div id="react-content">
+    <a class="ant-btn ant-btn-danger" th:href="@{/logout}">Logout</a>
 
     <div class="main-wrapper">
         <div class="ant-row">
