--- a/src/main/resources/templates/components/table.html
+++ b/src/main/resources/templates/components/table.html
@@ -18,7 +18,7 @@
             display: none;
         }
     </style>
-    <link rel="stylesheet" th:href="@{/css/ant.less}" type="text/css"/>
+    <link rel="stylesheet/less" th:href="@{/css/ant.less}" type="text/css"/>
     <script src="https://b.alicdn.com/s/polyfill.min.js?features=default,es2015,Intl"></script>
     <script>
         (function () {
@@ -81,7 +81,10 @@
 </head>
 <body>
 <div id="react-content">
-    <a class="ant-btn ant-btn-danger" th:href="@{/logout}">Logout</a>
+    <form class="" method="post" th:action="@{/logout}">
+        <input th:name="_csrf" type="hidden" th:value="${_csrf.token}">
+        <button class="ant-btn ant-btn-lg ant-btn-dangerous btn-block" type="submit">Log Out</button>
+    </form>
     <div class="main-wrapper">
         <div class="ant-row">
             <div
@@ -19645,7 +19648,7 @@ export <span class="token keyword">default</span> <span class="token punctuation
         </div>
     </div>
 </div>
-<!--<script src="/index-cab025ce.js"></script>-->
+<script th:src="@{/js/ant.js}"></script>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-72788897-1"></script>
 <script>
