--- a/src/main/resources/templates/layouts/partials/head.html
+++ b/src/main/resources/templates/layouts/partials/head.html
@@ -14,7 +14,7 @@
     <link href="https://gw.alipayobjects.com/zos/rmsportal/rlpTLlbMzTNYuZGGCVYM.png" rel="icon" type="image/x-icon"/>
 
     <link rel="stylesheet" th:href="@{/css/ant.css}" type="text/css"/>
-    <link rel="stylesheet" th:href="@{/css/ant.less}" type="text/css"/>
+    <link rel="stylesheet/less" th:href="@{/css/ant.less}" type="text/css"/>
 
 
     <style id="nprogress-style">
