--- a/src/main/resources/templates/components/button.html
+++ b/src/main/resources/templates/components/button.html
@@ -81,7 +81,10 @@
 </head>
 <body>
 <div id="react-content">
-    <a class="ant-btn ant-btn-danger" th:href="@{/logout}">Logout</a>
+    <form class="" method="post" th:action="@{/logout}">
+        <input th:name="_csrf" type="hidden" th:value="${_csrf.token}">
+        <button class="ant-btn ant-btn-lg ant-btn-dangerous btn-block" type="submit">Log Out</button>
+    </form>
     <div class="main-wrapper">
         <div class="ant-row">
             <div
